--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "BSD",
   "dependencies": {
     "grunt-contrib-compress": "~0.5.3",
-    "grunt-shell": "~0.6.1",
+    "grunt-shell": "0.6.2",
     "grunt-bump": "0.0.13",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-git": "~0.2.4"
